<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_DeleteFile" Id="{947955af-02d6-41ce-acb4-41f117fff3d4}">
    <Declaration><![CDATA[TYPE ST_DeleteFile :
STRUCT
	sDirPath:STRING;//目录路径名
	sFilePath:STRING;//文件路径名
	nCount:UINT;//计数
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>